corrected footer text contrast, corrected hero buttons

--- a/assets/sass/docs.sass
+++ b/assets/sass/docs.sass
@@ -182,3 +182,7 @@ li.expanded > a > .navlist-caret
 .navbar-item img
   transform: scale(1.5)
 
+.footer-text a
+  color: white
+  font-weight: bold
+  text-decoration: underline
